--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -9,6 +9,22 @@ a {
   text-decoration: none;
   color: black;
 }
+.contPrin {
+  display: flex;
+  justify-content: space-around;
+  width: 15%;
+}
+
+#muevete {
+  display: flex;
+  flex-wrap: nowrap;
+  padding: 0 1%;
+}
+
+#sacameelpadding {
+  padding: 0;
+  margin: 0;
+}
 
 .logoNav {
   width: 85px;
@@ -25,4 +41,17 @@ a {
 
 .iniciar {
   margin-right: 8%;
+}
+
+.divSeparador {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.enlaces {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
 }
