--- a/src/front/styles/adopter.css
+++ b/src/front/styles/adopter.css
@@ -9,7 +9,6 @@
 .imgprofile {
   display: flex;
   justify-content: flex-end;
-
   padding-right: 5rem;
 }
 .adopterphoto {
@@ -19,7 +18,6 @@
   object-fit: cover;
 }
 .adopterInfo {
-  vertical-align: middle;
   background-color: #faf4f7;
 }
 .editbutton {
@@ -33,6 +31,9 @@
 }
 .prymaryinfo {
   padding-left: 1rem;
+}
+.labelprofileinfo {
+  color: #e55e2f;
 }
 .titleFavs {
   position: relative;
