--- a/src/front/styles/Card.css
+++ b/src/front/styles/Card.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans&display=swap");
 
-.card {
+.carddogs {
   position: relative;
   display: block;
   width: 15rem;
@@ -11,7 +11,7 @@
   margin-right: 1rem;
 }
 
-.card-body {
+.dogcardsbody {
   margin-top: 3.3rem;
 }
 #cardphoto {
@@ -23,7 +23,7 @@
   width: 10rem;
   height: 10rem;
 }
-.card-text {
+.textcarddog {
   width: 90%;
 }
 .IconsAndDescription {
