--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -1,3 +1,4 @@
-/* 
-    General Styles used on every website (Don't Repeat Yourself)
-*/
+body {
+  background: url("../img/girlphoto.jpg");
+  background-size: cover;
+}
