--- a/src/front/styles/alldogslist.css
+++ b/src/front/styles/alldogslist.css
@@ -20,6 +20,10 @@
   border: none;
   padding-left: 7%;
 }
+.filterbuttons {
+  display: flex;
+  justify-content: center;
+}
 .filterbuttonsubmit {
   font-family: "Alegreya Sans", sans-serif;
   font-weight: bold;
@@ -31,6 +35,7 @@
   border-radius: 5px;
   border: none;
 }
+
 .FilterButtonReset {
   font-family: "Alegreya Sans", sans-serif;
   font-weight: bolder;
