--- a/src/front/styles/Card.css
+++ b/src/front/styles/Card.css
@@ -4,6 +4,7 @@
   position: relative;
   display: block;
   width: 15rem;
+  margin-top: 8rem;
   background-color: #faf4f7;
   border-radius: 1rem;
   font-family: "Alegreya Sans", sans-serif;
@@ -13,31 +14,44 @@
 
 .dogcardsbody {
   margin-top: 3.3rem;
+  width: 100%;
 }
 #cardphoto {
-  top: -28%;
-  left: 17%;
   position: absolute;
+  top: -24%;
+  margin-right: auto;
+  margin-left: auto;
+  left: 0;
+  right: 0;
   border-radius: 50%;
   object-fit: cover;
   width: 10rem;
   height: 10rem;
 }
 .textcarddog {
-  width: 90%;
+  width: 100%;
 }
 .IconsAndDescription {
   margin-bottom: 1rem;
+  width: 100%;
 }
 .IconsCard {
+  width: 100%;
+  margin-right: 0;
+  margin-left: 0;
   margin-bottom: 1rem;
 }
 .CaractIcon {
-  width: 2rem;
-  height: 2rem;
+  width: 100%;
+  height: 100%;
 }
-.IconsDescription {
-  font-size: 0.7rem;
+.Icons_text {
+  margin-right: 0;
+  margin-left: 0;
+  font-family: "Alegreya Sans", sans-serif;
+}
+.iconTexInv {
+  width: 100%;
 }
 .btn {
   background-color: #f8d2c3;
