--- a/src/front/styles/adopter.css
+++ b/src/front/styles/adopter.css
@@ -1,11 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans&display=swap");
 
-.adopterInfo {
-  font-family: "Alegreya Sans", sans-serif;
-  font-size: large;
-  width: 70%;
-  padding: 1rem;
+.adopterprofile {
+  display: flex;
+  justify-content: center;
 }
+
 .imgprofile {
   display: flex;
   justify-content: flex-end;
@@ -18,6 +17,10 @@
   object-fit: cover;
 }
 .adopterInfo {
+  font-family: "Alegreya Sans", sans-serif;
+  font-size: large;
+  padding: 1rem;
+  margin-top: 1rem;
   background-color: #faf4f7;
 }
 .editbutton {
@@ -36,22 +39,33 @@
   color: #e55e2f;
 }
 .titleFavs {
+  padding-right: 2rem;
   position: relative;
   display: flex;
-  margin-top: 5rem;
   padding-left: 3rem;
+  margin-top: 3rem;
   border-bottom: 0.3rem solid orange;
   font-family: "Alegreya Sans", sans-serif;
 }
 .ImgTitleFavs {
   position: absolute;
-  width: 8rem;
-  top: -4rem;
+  width: 81px;
+  left: 0%;
+  height: auto;
+  top: -32.8%;
+  z-index: 2;
 }
-.cardList {
-  width: 60%;
-  margin: 0 auto;
-  margin-top: 10rem;
+.adopter_NavFavs_Img {
+  top: -4rem;
+  margin-right: auto;
+  margin-left: auto;
+  left: 0;
+  right: 0;
+  width: 100%;
+}
+.adopter_cardlist {
   display: flex;
   justify-content: center;
+  width: 60%;
+  margin: 0 auto;
 }
