--- a/src/front/styles/alldogslist.css
+++ b/src/front/styles/alldogslist.css
@@ -5,7 +5,7 @@
   margin: 0 auto;
   width: 80%;
   border: 1pt solid black;
-  padding: 1% 3% 1% 3%;
+  padding: 0 3% 1%;
   box-shadow: 0px 10px 4px rgba(0, 0, 0, 0.25);
   border-radius: 1rem;
 }
@@ -13,6 +13,7 @@
   font-family: "Alegreya Sans", sans-serif;
   display: flex;
   margin: auto;
+  margin-top: 1rem;
   width: 80%;
   height: 2rem;
   background-color: rgba(242, 164, 132, 0.17);
@@ -31,6 +32,7 @@
   color: #fffbfb;
   width: 60%;
   margin-right: 1rem;
+  margin-top: 1rem;
   height: 2rem;
   border-radius: 5px;
   border: none;
@@ -44,6 +46,7 @@
   height: 2rem;
   width: 20%;
   margin-right: 1rem;
+  margin-top: 1rem;
   border-radius: 5px;
   border: none;
 }
