--- a/src/front/styles/Card.css
+++ b/src/front/styles/Card.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans&display=swap");
 
-.carddogs {
+.Card_carddogs {
   position: relative;
   display: block;
   width: 15rem;
@@ -12,11 +12,11 @@
   margin-right: 1rem;
 }
 
-.dogcardsbody {
+.Card_dogcardsbody {
   margin-top: 3.3rem;
   width: 100%;
 }
-#cardphoto {
+#Card_cardphoto {
   position: absolute;
   top: -24%;
   margin-right: auto;
@@ -28,37 +28,37 @@
   width: 10rem;
   height: 10rem;
 }
-.textcarddog {
+.Card_textcarddog {
   width: 100%;
 }
-.IconsAndDescription {
+.Card_IconsAndDescription {
   margin-bottom: 1rem;
   width: 100%;
 }
-.IconsCard {
+.Card_IconsCard {
   width: 100%;
   margin-right: 0;
   margin-left: 0;
   margin-bottom: 1rem;
 }
-.CaractIcon {
+.Card_CaractIcon {
   width: 100%;
   height: 100%;
 }
-.Icons_text {
+.Card_Icons_text {
   margin-right: 0;
   margin-left: 0;
   font-family: "Alegreya Sans", sans-serif;
 }
-.iconTexInv {
+.Card_iconTexInv {
   width: 100%;
 }
-.btn {
+.Card_btn {
   background-color: #f8d2c3;
   color: black;
   border: none;
 }
-.FavButton {
+.Card_FavButton {
   top: 70%;
   left: 85%;
   position: absolute;
@@ -73,16 +73,16 @@
   width: 2.9rem;
   height: 2.9rem;
 }
-#hearthbutton {
+#Card_hearth {
   margin-top: 0.4rem;
   width: 2.2rem;
   height: 2.2rem;
 }
-.location {
+.Card_location {
   margin-top: 1rem;
   display: block;
 }
-.IconUbic {
+.Card_IconUbic {
   width: 0.7rem;
   height: 0.9rem;
 }
