--- a/src/front/styles/blogsection.css
+++ b/src/front/styles/blogsection.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@100&family=Source+Code+Pro:wght@200&family=Vollkorn:ital,wght@1,500&display=swap");
 
-.headerblogsection {
+.blogart_header {
   border-bottom: #ed8b62 solid 3px;
   margin-bottom: 2%;
 }
