--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -25,7 +25,7 @@
 
 .familyHeader {
   width: 100%;
-  height: 100%;
+  height: auto;
   justify-content: end;
   margin: 0%;
   margin-top: -10%;
@@ -117,28 +117,28 @@
   text-align: center;
 }
 
-.buttonHomeRegis{
+.buttonHomeRegis {
   background-color: #f8d2c3;
   border-radius: 15px;
   padding: 1rem 1rem;
 }
 
-.gotoblog{
+.gotoblog {
   display: flex;
   margin-top: 10%;
 }
 
-.dogBlogHome{
+.dogBlogHome {
   width: 100%;
   height: auto;
   border-radius: 3rem;
 }
 
-a:hover{
+a:hover {
   color: black !important;
 }
 
-.blogTitleHome{
+.blogTitleHome {
   font-family: "Alegreya Sans", sans-serif;
   font-size: 50px;
   margin-top: 10%;
@@ -146,26 +146,26 @@ a:hover{
   text-align: center;
 }
 
-.blogcenter{
+.blogcenter {
   text-align: center;
 }
 
-.textoBlogHomeDiv{
+.textoBlogHomeDiv {
   margin-top: 3%;
   text-align: center;
 }
 
-.textoBlogHome{
+.textoBlogHome {
   font-family: "Alegreya Sans", sans-serif;
   font-size: 25px;
 }
 
-.buttonBlogHomePosition{
+.buttonBlogHomePosition {
   text-align: center;
   margin-top: 10%;
 }
 
-.buttonBlogHome{
+.buttonBlogHome {
   background-color: #f8d2c3;
   border-radius: 1rem;
   font-size: 1.5rem;
