--- a/src/front/styles/blogart.css
+++ b/src/front/styles/blogart.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@100&family=Source+Code+Pro:wght@200&family=Vollkorn:ital,wght@1,500&display=swap");
 
-.headerblogsection {
+.headerblogart {
   border-bottom: #ed8b62 solid 3px;
   margin-bottom: 2%;
 }
@@ -61,10 +61,18 @@
 .blogart-botonfinal2 {
   background-color: #f8d2c3;
   color: black;
-  border: none;
   text-decoration-color: white;
   border-radius: 3%;
   margin-top: 5%;
-  padding: 1rem 1rem;
+
   font-size: 1.5rem;
+  align-items: center;
+  text-align: center;
+  width: 65%;
+  margin-bottom: 3%;
+  font-size: 25px;
+  border: solid black 2px;
+  font-family: "Alegreya Sans", sans-serif;
+  background-color: #f8d2c3;
+  border-radius: 15px;
 }
