guardando inicio quienes somos

--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@100;300;400&family=Comforter&family=Josefin+Sans:ital,wght@1,500&family=Sansita+Swashed:wght@300&family=Ubuntu:wght@300&display=swap");
+
 .containerHeader {
   display: flex;
 }
@@ -132,6 +133,8 @@
   width: 100%;
   height: auto;
   border-radius: 3rem;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 a:hover {
