--- a/src/front/styles/Card.css
+++ b/src/front/styles/Card.css
@@ -60,6 +60,23 @@
   width: 2.9rem;
   height: 2.9rem;
 }
+
+.editButton {
+  top: 70%;
+  left: 85%;
+  position: absolute;
+  border-radius: 50%;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgb(238, 167, 101) 50%,
+    rgb(221, 107, 107) 100%
+  );
+  width: 2.9rem;
+  height: 2.9rem;
+}
+
 #hearthbutton {
   margin-top: 0.4rem;
   width: 2.2rem;
@@ -72,4 +89,10 @@
 .IconUbic {
   width: 0.7rem;
   height: 0.9rem;
+}
+
+#editPencil {
+  margin-top: 0.4rem;
+  width: 2.2rem;
+  height: 2.2rem;
 }
