--- a/src/front/styles/Card.css
+++ b/src/front/styles/Card.css
@@ -3,7 +3,7 @@
 .Card_carddogs {
   position: relative;
   display: block;
-  width: 15rem;
+  width: 16rem;
   margin-top: 8rem;
   background-color: #faf4f7;
   border-radius: 1rem;
@@ -13,7 +13,7 @@
 }
 
 .Card_dogcardsbody {
-  margin-top: 3.3rem;
+  margin-top: 5rem;
   width: 100%;
 }
 #Card_cardphoto {
@@ -41,16 +41,19 @@
   margin-left: 0;
   margin-bottom: 1rem;
 }
+
 .Card_CaractIcon {
-  width: 100%;
-  height: 100%;
+  width: 3em;
+  height: 3em;
 }
+
 .Card_Icons_text {
   margin-right: 0;
   margin-left: 0;
   font-family: "Alegreya Sans", sans-serif;
 }
 .Card_iconTexInv {
+  font-size: 1em;
   width: 100%;
 }
 .Card_btn {
