--- a/src/front/styles/blognoticias.css
+++ b/src/front/styles/blognoticias.css
@@ -3,6 +3,13 @@
   text-align: center;
   font-size: 50px;
 }
+
+.blognoticias_titulonotica1 {
+  border-bottom: rgb(242, 138, 102) solid 3px;
+  margin-bottom: 2%;
+  margin-left: 2%;
+  margin-right: 2%;
+}
 .blognoticias_titulo2 {
   font-family: "Vollkorn", serif;
   text-align: left;
@@ -10,23 +17,14 @@
   padding-left: 5%;
   margin-top: 1%;
 }
-.blognoticias_linea {
-  color: #ed8b62;
-  display: block;
-  margin: auto;
-  margin-top: 2%;
-  margin-left: 5%;
-  margin-right: 5%;
-  border-style: dashed solid;
-}
+
 .blognoticias-foto1 {
   width: 15rem;
   height: 15rem;
   border-radius: 50%;
   object-fit: cover;
-  margin-top: 0%;
+  margin-top: 5%;
   margin-bottom: 5%;
-  margin-left: 15%;
 }
 
 .blognoticias-titulo1 {
@@ -45,19 +43,17 @@
 .blognoticias-card1 {
   display: flex;
   align-items: center;
-  padding-top: 1%;
   background-color: rgba(233, 163, 147, 0.27);
   border-radius: 25px;
-  margin-left: 5%;
 }
 
 .blognoticias-boton {
   align-items: center;
   margin-top: 3%;
   text-align: center;
-  margin-left: 38%;
-  width: 30%;
-  height: 20%;
+  margin-left: 33%;
+  width: 35%;
+
   margin-bottom: 3%;
   font-size: 20px;
   border: solid black 2px;
@@ -93,8 +89,7 @@
 .blognoticias-botonfinal {
   border: solid black 2px;
   color: black;
-  margin-top: 8%;
-  width: 15%;
+  margin-top: 3%;
   margin-bottom: 5%;
   font-family: "Alegreya Sans", sans-serif;
   font-size: 22px;
@@ -109,7 +104,6 @@
   padding-top: 1%;
   background-color: rgba(233, 163, 147, 0.27);
   border-radius: 25px;
-  margin-left: 3%;
 }
 
 .blognoticias-card4 {
