--- a/src/front/styles/formRegisterUser.css
+++ b/src/front/styles/formRegisterUser.css
@@ -1,29 +1,57 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans&display=swap");
 
+.formRegisterUser_view {
+  /* background: url("../img/form.register.user.photo.png"); */
+  display: block;
+  margin: 0 auto;
+  border-radius: 10%;
+  padding: 1rem 1rem;
+  width: 35rem;
+  z-index: 0;
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+}
+.formRegisterUser_Photo {
+  position: absolute;
+  margin: 0 auto;
+  border-radius: 5%;
+  width: 35rem;
+  height: 40rem;
+  z-index: -1;
+  top: 35%;
+  margin-right: auto;
+  margin-left: auto;
+  left: 0;
+  right: 0;
+  object-fit: cover;
+}
 .formRegisterUser_title {
+  font-family: "Alegreya Sans", sans-serif;
   display: flex;
   text-align: center;
-  width: 100%;
+  z-index: 1;
+  color: white;
+  font-weight: 400;
 }
 .formRegisterUser_GroupInput {
+  font-family: "Alegreya Sans", sans-serif;
+  font-size: large;
   width: 80%;
   display: flex;
   margin: auto;
+  z-index: 1;
+  color: white;
+  font-weight: bold;
 }
-.formRegisterUser_view {
-  border-radius: 10%;
-  padding: 1rem 1rem;
-  margin: 1rem 1rem;
-  background-color: rgb(255, 255, 255);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
+
 .inputAgeAndCity {
   display: flex;
   justify-content: end;
+  z-index: 1;
 }
 .formRegisterUser_button {
   background-color: #f2a484;
   font-family: Alegreya Sans;
   font-size: larger;
   font-weight: bold;
+  z-index: 1;
 }
