--- a/src/front/styles/formRegisterUser.css
+++ b/src/front/styles/formRegisterUser.css
@@ -17,7 +17,7 @@
   width: 35rem;
   height: 40rem;
   z-index: -1;
-  top: 35%;
+  top: 32vh;
   margin-right: auto;
   margin-left: auto;
   left: 0;
