--- a/src/front/styles/QuienesSomos.css
+++ b/src/front/styles/QuienesSomos.css
@@ -39,18 +39,47 @@
 }
 
 .middleBarQuienesSomos {
+  display: flex;
+  justify-content: space-around;
   margin-top: 20rem;
-  padding-top: 3%;
-  padding-bottom: 3%;
+  padding-top: 5%;
+  padding-bottom: 5%;
   background-color: rgb(239, 201, 182);
   display: flex;
+  position: relative;
 }
 
 .picQuienesSomosDos {
-  top: 170%;
+  top: -52%;
+  position: absolute;
   border-radius: 50%;
   object-fit: cover;
-  width: 20rem;
-  height: 20rem;
-  position: absolute;
+  width: 20vmax;
+  height: 20vmax;
+}
+
+.textCenterMision {
+  text-align: center;
+}
+
+.misTitle {
+  font-family: "Alegreya Sans", sans-serif;
+  font-size: 3rem;
+}
+
+.misText {
+  font-family: "Alegreya Sans", sans-serif;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+.proTitle {
+  font-family: "Alegreya Sans", sans-serif;
+  font-size: 3rem;
+}
+
+.proText {
+  font-family: "Alegreya Sans", sans-serif;
+  font-size: 1.5rem;
+  text-align: center;
 }
