--- a/src/front/styles/login.css
+++ b/src/front/styles/login.css
@@ -50,3 +50,21 @@
   font-weight: bold;
   z-index: 1;
 }
+
+@media only screen and (max-width: 1600px) {
+  .login_Photo {
+    display: none;
+  }
+  .login_view {
+    border-radius: 5%;
+    margin-top: 2rem;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+  .login_title {
+    font-weight: bolder;
+    color: black;
+  }
+  .login_GroupInput {
+    color: black;
+  }
+}
