--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -52,3 +52,27 @@ a {
   justify-content: space-around;
   width: 100%;
 }
+
+
+.navbar-circleone{
+  padding-left:  91%;
+  z-index: -1;
+ position: absolute;
+ 
+ margin-top:0.5%;
+ }
+ 
+ .navbar-circletwo{
+  padding-left: 89%;
+  padding-top: 7%;
+
+  margin-top: -4%;
+  z-index: -1;
+ }
+ 
+ @media only screen and (max-width: 600px) {
+   .navbar-circleone, .navbar-circletwo {
+     
+     display: none;
+   }
+ }
