--- a/src/front/styles/Card.css
+++ b/src/front/styles/Card.css
@@ -16,7 +16,7 @@
   margin-top: 5rem;
   width: 100%;
 }
-#Card_cardphoto {
+.Card_cardphoto {
   position: absolute;
   top: -24%;
   margin-right: auto;
@@ -47,14 +47,10 @@
   height: 3em;
 }
 
-.Card_Icons_text {
-  margin-right: 0;
-  margin-left: 0;
-  font-family: "Alegreya Sans", sans-serif;
-}
 .Card_iconTexInv {
   font-size: 1em;
   width: 100%;
+  font-family: "Alegreya Sans", sans-serif;
 }
 .Card_btn {
   background-color: #f8d2c3;
@@ -76,7 +72,7 @@
   width: 2.9rem;
   height: 2.9rem;
 }
-#Card_hearth {
+.Card_hearth {
   margin-top: 0.4rem;
   width: 2.2rem;
   height: 2.2rem;
@@ -88,4 +84,19 @@
 .Card_IconUbic {
   width: 0.7rem;
   height: 0.9rem;
+}
+
+@media only screen and (max-width: 1200px) {
+  .Card_cardphoto {
+    display: relative;
+  }
+  .Card_CaractIcon {
+    display: none;
+  }
+  .Card_iconTexInv {
+    display: none;
+  }
+  .Card_card-title {
+    padding-top: 2rem;
+  }
 }
