--- a/src/front/styles/blogsection.css
+++ b/src/front/styles/blogsection.css
@@ -2,7 +2,7 @@
 
 .headerblogsection {
   border-bottom: #ed8b62 solid 3px;
-  margin-bottom: 2%;
+  
 }
 
 .perrogafasblog {
@@ -13,17 +13,19 @@
   border-radius: 5%;
   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 2%;
 }
 
 .tituloblog1 {
-  font-family: "Vollkorn", serif;
+  font-family: "Alegreya Sans", sans-serif;
   text-align: center;
+  font-size: 50px;
 }
 
 .tituloblog2 {
-  font-family: "Vollkorn", serif;
+  font-family: "Alegreya Sans", sans-serif;
   text-align: left;
-  padding-left: 5%;
+  padding-left: 1%;
   padding-top: 0.5%;
 }
 
@@ -31,7 +33,7 @@
   color: #ed8b62;
   display: block;
   margin: auto;
-  margin-top: 2%;
+ 
   margin-left: 5%;
   margin-right: 5%;
   border-style: dashed solid;
