--- a/src/front/styles/blognoticias.css
+++ b/src/front/styles/blognoticias.css
@@ -13,9 +13,9 @@
 }
 .blognoticias_titulo2 {
   font-family: "Alegreya Sans", sans-serif;
-  text-align: left;
+
   font-size: 35px;
-  padding-left: 5%;
+
   margin-top: 3%;
 }
 
@@ -30,20 +30,25 @@
 
 .blognoticias-titulo1 {
   font-family: "Alegreya Sans", sans-serif;
-  text-align: left;
   font-size: 30px;
   text-align: center;
+  padding-right: 5%;
+  padding-top: 2%;
 }
 .blognoticias-texto1 {
   font-family: "Alegreya Sans", sans-serif;
+  display: flex;
   font-size: 25px;
   margin-top: 5%;
   text-align: center;
+  padding-right: 5%;
 }
 
 .blognoticias-card1 {
+  margin-top: 5%;
   display: flex;
   align-items: center;
+  padding-top: 1%;
   background-color: rgba(233, 163, 147, 0.27);
   border-radius: 25px;
 }
