--- a/src/front/styles/formRegisterProte.css
+++ b/src/front/styles/formRegisterProte.css
@@ -1,9 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans&display=swap");
 
 .formRegisterProte_view {
+  background: url("https://cdn.discordapp.com/attachments/939128267607257158/946794698314493952/celine-sayuri-tagami-E48Dz9_54DY-unsplash.jpg");
+  background-size: cover;
   display: block;
   margin: 0 auto;
-  border-radius: 10%;
+  border-radius: 5rem;
   padding: 1rem 1rem;
   width: 35rem;
   z-index: 0;
@@ -30,6 +32,7 @@
   z-index: 1;
   color: white;
   font-weight: 400;
+  text-shadow: 2px 1px black;
 }
 .formRegisterProte_GroupInput {
   font-family: "Alegreya Sans", sans-serif;
@@ -40,6 +43,7 @@
   z-index: 1;
   color: white;
   font-weight: bold;
+  text-shadow: 2px 1px black;
 }
 .formRegisterProte_button {
   background-color: #f2a484;
@@ -47,21 +51,4 @@
   font-size: larger;
   font-weight: bold;
   z-index: 1;
-}
-@media only screen and (max-width: 1600px) {
-  .formRegisterProte_Photo {
-    display: none;
-  }
-  .formRegisterProte_view {
-    border-radius: 5%;
-    margin-top: 2rem;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  }
-  .formRegisterProte_title {
-    font-weight: bolder;
-    color: black;
-  }
-  .formRegisterProte_GroupInput {
-    color: black;
-  }
 }
