--- a/src/front/styles/formRegisterUser.css
+++ b/src/front/styles/formRegisterUser.css
@@ -1,7 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans&display=swap");
+@import url("https://s1.eestatic.com/2020/10/19/curiosidades/mascotas/mascotas-alimentacion-perros_529458667_162988307_1024x576.jpg");
 
 .formRegisterUser_view {
-  background: url("../img/form.register.user.photo.png");
+  background: url("https://images-ext-1.discordapp.net/external/CxbtcORJQTOohL0pmtvdjw85x7HD2nEOkcjEmEUnBKk/https/wallpaperaccess.com/full/5172232.jpg?width=400&height=267");
+  background-size: cover;
   display: block;
   margin: 0 auto;
   border-radius: 10%;
@@ -34,6 +35,7 @@
   z-index: 1;
   color: white;
   font-weight: 400;
+  text-shadow: 2px 1px black;
 }
 .formRegisterUser_GroupInput {
   font-family: "Alegreya Sans", sans-serif;
@@ -44,6 +46,7 @@
   z-index: 1;
   color: white;
   font-weight: bold;
+  text-shadow: 2px 1px black;
 }
 
 .formRegisterUser_inputAgeAndCity {
@@ -58,23 +61,3 @@
   font-weight: bold;
   z-index: 1;
 }
-/* @media only screen and (max-width: 1600px) {
-  .formRegisterUser_Photo {
-    display: none;
-  }
-  .formRegisterUser_view {
-    border-radius: 5%;
-    margin-top: 2rem;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  }
-  .formRegisterUser_title {
-    font-weight: bolder;
-    color: black;
-  }
-  .formRegisterUser_GroupInput {
-    color: black;
-  }
-  .formRegisterUser_inputAgeAndCity {
-    color: black;
-  }
-} */
