--- a/src/front/styles/login.css
+++ b/src/front/styles/login.css
@@ -3,9 +3,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans&display=swap");
 
 .login_view {
+  background: url("https://cdn.discordapp.com/attachments/939128267607257158/946794698599698482/freestocks-t8SxccV0Agw-unsplash.jpg");
+  background-size: cover;
   display: block;
   margin: 0 auto;
-  border-radius: 10%;
+  border-radius: 5rem;
   padding: 1rem 1rem;
   width: 35rem;
   z-index: 0;
@@ -32,6 +34,7 @@
   z-index: 1;
   color: white;
   font-weight: bolder;
+  text-shadow: 2px 1px black;
 }
 .login_GroupInput {
   font-family: "Alegreya Sans", sans-serif;
@@ -42,6 +45,7 @@
   z-index: 1;
   color: white;
   font-weight: bold;
+  text-shadow: 2px 1px black;
 }
 .login_button {
   background-color: #f2a484;
@@ -49,22 +53,4 @@
   font-size: larger;
   font-weight: bold;
   z-index: 1;
-}
-
-@media only screen and (max-width: 1600px) {
-  .login_Photo {
-    display: none;
-  }
-  .login_view {
-    border-radius: 5%;
-    margin-top: 2rem;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  }
-  .login_title {
-    font-weight: bolder;
-    color: black;
-  }
-  .login_GroupInput {
-    color: black;
-  }
 }
