--- a/src/front/styles/PerfilProtectora.css
+++ b/src/front/styles/PerfilProtectora.css
@@ -79,3 +79,9 @@
   font-family: "Alegreya Sans", sans-serif;
   margin-right: -6rem;
 }
+
+@media only screen and (max-width: 1224px) {
+  .Protectora_ImgTitleFavs {
+    display: none;
+  }
+}
