--- a/src/front/styles/Card.css
+++ b/src/front/styles/Card.css
@@ -1,64 +1,84 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans&display=swap");
 
-.carddogs {
+.Card_carddogs {
   position: relative;
   display: block;
-  width: 15rem;
+  width: 16rem;
+  margin-top: 8rem;
   background-color: #faf4f7;
   border-radius: 1rem;
   font-family: "Alegreya Sans", sans-serif;
   text-align: center;
-  margin-right: 3rem;
+  margin-right: 1rem;
 }
 
-.dogcardsbody {
-  margin-top: 3.3rem;
+.Card_dogcardsbody {
+  margin-top: 5rem;
+  width: 100%;
 }
-#cardphoto {
-  top: -28%;
-  left: 17%;
+.Card_cardphoto {
   position: absolute;
+  top: -24%;
+  margin-right: auto;
+  margin-left: auto;
+  left: 0;
+  right: 0;
   border-radius: 50%;
   object-fit: cover;
   width: 10rem;
   height: 10rem;
 }
-.textcarddog {
-  text-align: center;
-  width: 90%;
+.Card_textcarddog {
+  width: 100%;
 }
-.IconsAndDescription {
+.Card_IconsAndDescription {
   margin-bottom: 1rem;
+  width: 100%;
 }
-.IconsCard {
-  margin-bottom: 1rem;
+.Card_IconsCard {
+  width: 100%;
+  margin-right: 0;
+  margin-left: 0;
 }
-.CaractIcon {
-  width: 2rem;
-  height: 2rem;
+
+.Card_CaractIcon {
+  width: 3em;
+  height: 3em;
 }
-.IconsDescription {
-  font-size: 0.7rem;
+
+.Card_iconTexInv {
+  font-size: 1em;
+  width: 100%;
+  font-family: "Alegreya Sans", sans-serif;
 }
-.btn {
+.Card_btn {
   background-color: #f8d2c3;
   color: black;
   border: none;
 }
-.FavButton {
-  top: 70%;
-  left: 85%;
-  position: absolute;
-  border-radius: 50%;
-  background: rgb(255, 255, 255);
-  background: linear-gradient(
-    180deg,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(255, 122, 122, 1) 50%,
-    rgba(255, 0, 0, 1) 100%
-  );
-  width: 2.9rem;
-  height: 2.9rem;
+
+.Card_location {
+  margin-top: 1rem;
+  display: block;
+}
+.Card_IconUbic {
+  width: 0.7rem;
+  height: 0.9rem;
+}
+
+@media only screen and (max-width: 1200px) {
+  .Card_cardphoto {
+    display: relative;
+  }
+  .Card_CaractIcon {
+    display: none;
+  }
+  .Card_iconTexInv {
+    display: none;
+  }
+  .Card_card-title {
+    padding-top: 2rem;
+  }
 }
 
 .editButton {
@@ -75,20 +95,6 @@
   );
   width: 2.9rem;
   height: 2.9rem;
-}
-
-#hearthbutton {
-  margin-top: 0.4rem;
-  width: 2.2rem;
-  height: 2.2rem;
-}
-.location {
-  margin-top: 1rem;
-  display: block;
-}
-.IconUbic {
-  width: 0.7rem;
-  height: 0.9rem;
 }
 
 #editPencil {
